--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,5 @@
 header {
+  position: relative;
 }
 
 .header-top {
@@ -26,7 +27,7 @@ header {
 }
 
 .herro-main {
-  padding: 30px 0;
+  padding: 50px 0;
   display: flex;
   justify-content: space-between;
 }
@@ -70,6 +71,10 @@ header {
 }
 
 .navbar {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  margin-top: -30px;
 }
 
 .nav {
@@ -119,6 +124,53 @@ header {
   letter-spacing: 0.36px;
   text-align: center;
   padding: 19px 42px;
-
+  transition: all 0.6s ease;
   cursor: pointer;
+}
+
+.question-btn:hover {
+  color: rgb(28, 39, 82);
+  background: rgb(244, 244, 244);
+}
+.btn-menu {
+  display: none;
+}
+@media screen and ((min-width: 350px) and (max-width:768px)) {
+  .top-info {
+    flex-direction: column;
+  }
+  .top-info span {
+    display: none;
+  }
+
+  .herro-main {
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 20px;
+  }
+
+  .connect {
+    display: none;
+  }
+
+  .navbar {
+    display: none;
+  }
+
+  .btn-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(255, 179, 66);
+    padding: 5px;
+    border: none;
+    border-radius: 8px;
+    color: rgb(244, 244, 244);
+    font-family: Inter;
+    font-size: 26px;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: 0.36px;
+    text-align: center;
+  }
 }
