--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,6 +2,10 @@ header {
   position: relative;
 }
 
+.header-wrapper {
+  position: relative;
+}
+
 .header-top {
   background: rgb(242, 242, 242);
   padding: 20px 0;
@@ -74,7 +78,7 @@ header {
   position: absolute;
   z-index: 1;
   width: 100%;
-  margin-top: -30px;
+  margin-top: -40px;
 }
 
 .nav {
@@ -157,6 +161,23 @@ header {
     display: none;
   }
 
+  .show {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100vh;
+  }
+  .nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .btn-menu {
     display: flex;
     justify-content: center;
